Fixed November Spacing and removed text shadow

--- a/HomeTogetherServer/public/stylesheets/style.css
+++ b/HomeTogetherServer/public/stylesheets/style.css
@@ -3,7 +3,9 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   background-color: #6b6e70;
   color: #FFFFFF;
-  text-shadow: 1px 1px #000000;
+}
+h1, h2, h3{
+  text-shadow: 1px, 1px, black;
 }
 
 button {
@@ -54,6 +56,7 @@ table {
   margin: 1%;
   min-width: 25%;
   max-width: 50%;
+ 
 }
 
 thead tr th{
